# foss_public_alert_server/subscriptionHandler/push_notification_services/unified_push.py
@@ -5,6 +5,14 @@ import requests
 from django.http import HttpResponseBadRequest
 from requests import Response
 import json
+from datetime import datetime
+
+from subscriptionHandler.models import Subscription
+
+
+def create_subscription(token, bbox):
+    return Subscription(token=token, bounding_box=bbox, push_service=Subscription.PushServices.UNIFIED_PUSH,
+                        last_heartbeat=datetime.now())
 
 def send_notification(distributor_url, payload:json) -> Response:
     request = requests.post(distributor_url, payload)
